<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="Notifications"
        app:showAsAction="always"
        app:actionLayout="@layout/action_notification_badge" />

</menu>
